applications/pact-broker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      serviceAccountName: broker
      containers:
        - name: broker
          image: pactfoundation/pact-broker:2.107.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9292
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 10
            httpGet:
              path: /diagnostic/status/heartbeat
              port: http
          readinessProbe:
            periodSeconds: 10
            failureThreshold: 10
            httpGet:
              path: /diagnostic/status/heartbeat
              port: http
          livenessProbe:
            periodSeconds: 10
            failureThreshold: 10
            httpGet:
              path: /diagnostic/status/heartbeat
              port: http
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.6-alpine
          command:
            - /cloud_sql_proxy
            - -ip_address_types=PRIVATE
            - -log_debug_stdout
            - -enable_iam_login
            - -instances=$(INSTANCE_CONNECTION_NAME)=tcp:5432
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
