applications/pact-broker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pact-broker
spec:
  selector:
    app: pact-broker
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
