applications/pact-broker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broker
  annotations:
    cert-manager.io/issuer: broker # Will generate Certificate
spec:
  ingressClassName: public
  rules:
    - host: pact.harmelodic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: broker
                port:
                  name: http
  tls:
    - hosts:
        - pact.harmelodic.com
      secretName: tls-cert-pact-harmelodic-com # Secret will be auto-generated by cert-manager
